Correction bug bg changer

--- a/background-6.css
+++ b/background-6.css
@@ -1,21 +1,21 @@
 .dark body::before {
     content: "";
     background-image: url(https://images.pexels.com/photos/5469266/pexels-photo-5469266.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    opacity: 0.49; /* Ajustez cette valeur pour changer l'opacité */
+    opacity: 0.89; /* Ajustez cette valeur pour changer l'opacité */
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     position: absolute;
     z-index: -1;   
-    filter: blur(1px);
+
     
 }
 
 .light body::before {
     content: "";
     background-image: url(https://images.pexels.com/photos/5469266/pexels-photo-5469266.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    opacity: 0.49; /* Ajustez cette valeur pour changer l'opacité */
+    opacity: 0.89; /* Ajustez cette valeur pour changer l'opacité */
     top: 0;
     left: 0;
     bottom: 0;
@@ -23,4 +23,31 @@
     position: absolute;
     z-index: -1;   
     
+}
+
+.dark {
+    --text-primary: #ffffff; /* Updated for dark theme */
+    font-size: large;
+}
+
+.light {
+    --text-primary: #000000; /* Updated for light theme */
+    font-size: large;
+}
+
+:root {
+    --white: transparent;
+    --black: #000;
+    --gray-50: #f9f9f9;
+    --gray-100: #ececec;
+    --gray-200: #cdcdcd;
+    --gray-300: #b4b4b4;
+    --gray-400: #9b9b9b;
+    --gray-500: #676767;
+    --gray-600: #424242;
+    --gray-700: #2f2f2f;
+    --gray-800: transparent;
+    --gray-900: #171717;
+    --gray-950: #0d0d0d;
+    --brand-purple: #ab68ff;
 }
